<resources>
    <string name="app_name">Bite it</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="signup"><u>SIGNUP</u></string>
    <string name="facebook_app_id">1179385629177220</string>
    <string name="fb_login_protocol_scheme">fb1179385629177220</string>
    <string name="log_in1">Log In</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="discover_restaurant_in_your_city">Discover Restaurant in Your City &#128522;</string>
    <string name="search_here">Search Here</string>
    <string name="see_all">See All</string>
    <string name="meats">Meats</string>
    <string name="_2215_places">2215 Places</string>
    <string name="seafood">Seafood</string>


</resources>