<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".constraintLayoutExample">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        android:id="@+id/back_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/background_image"
        android:focusedByDefault="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/log_in1"
        android:id="@+id/login"
        android:textSize="@dimen/_10ssp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/cardview_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10pt"
        app:cardMaxElevation="0.5pt"
        app:cardElevation="0.3pt"
        android:background="@color/teal_200"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_210sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:id="@+id/constraint_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/i_email_Layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/i_password_Layout"
                android:layout_marginHorizontal="16pt"
                android:layout_marginTop="12pt"
                android:layout_marginBottom="4pt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="16pt"
                app:boxCornerRadiusTopEnd="16pt"
                app:boxCornerRadiusBottomStart="16pt"
                app:boxCornerRadiusTopStart="16pt"
                app:boxBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/i_email_field"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:text="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/i_password_Layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/i_email_Layout"
                android:layout_marginHorizontal="16pt"
                android:layout_marginTop="8pt"
                android:layout_marginBottom="4pt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="16pt"
                app:boxCornerRadiusTopEnd="16pt"
                app:boxCornerRadiusBottomStart="16pt"
                app:boxCornerRadiusTopStart="16pt"
                app:boxBackgroundColor="@color/white">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/i_password_field"
                    android:text=""
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password"
                android:text="@string/forgot_password"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/i_password_Layout"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="8pt"
                android:layout_centerInParent="true"
                android:layout_marginTop="8pt"
                android:layout_marginBottom="32pt"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_btn"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_image"
        app:layout_constraintBottom_toBottomOf="@+id/cardview_image"
        android:textColor="#ffffff"
        android:gravity="center"
        android:background="@drawable/button_shape"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="64pt"
        android:layout_marginBottom="4pt"
        android:paddingHorizontal="5pt"
        android:paddingVertical="8pt" />


</androidx.constraintlayout.widget.ConstraintLayout>