<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout1"
        android:orientation="horizontal"
        android:weightSum="2">


        <androidx.cardview.widget.CardView
            android:layout_width="0pt"
            android:layout_height="80pt"
            android:layout_weight="1"
            app:cardCornerRadius="6pt"
            app:cardMaxElevation="1pt"
            app:cardElevation="0.5pt"
            android:layout_marginRight="4pt"
            android:layout_marginVertical="4pt"
            app:cardBackgroundColor="@color/teal_200">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="46pt"
                    android:layout_marginHorizontal="8pt"
                    android:layout_marginTop="4pt"
                    android:id="@+id/image1"
                    android:src="@drawable/meats"
                    android:scaleType="fitCenter"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meats"
                    android:id="@+id/title1"
                    android:layout_below="@+id/image1"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginTop="4pt"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2215_places"
                    android:id="@+id/places1"
                    android:layout_below="@+id/title1"
                    android:textSize="4pt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0.1pt"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="0pt"
            android:layout_height="80pt"
            android:layout_weight="1"
            app:cardCornerRadius="6pt"
            app:cardMaxElevation="1pt"
            app:cardElevation="0.5pt"
            android:layout_marginLeft="4pt"
            android:layout_marginVertical="4pt"
            app:cardBackgroundColor="@color/teal_200">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/teal_200">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="46pt"
                    android:layout_marginHorizontal="8pt"
                    android:layout_marginTop="4pt"
                    android:id="@+id/image2"
                    android:src="@drawable/sea_food"
                    android:scaleType="fitCenter"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seafood"
                    android:id="@+id/title2"
                    android:layout_below="@+id/image2"
                    android:textStyle="bold"
                    android:textSize="8pt"
                    android:layout_marginTop="4pt"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2215_places"
                    android:id="@+id/places2"
                    android:layout_below="@+id/title2"
                    android:textSize="4pt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="0.1pt"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>